[package]
name = "gws"
version = "0.1.0"
authors = ["Albert Gomà i León"]
edition = "2018"

[dependencies]
hyper = "0.13.3"
tokio = { version = "0.2.13", features = ["full"] }
#tokio-tls = "0.3.0"
pretty_env_logger = "0.4.0"
futures = "0.3.4"
futures-util = "0.3.4"
#bytes = "0.5.4"
#async-compression = { version = "0.3.1", features = ["brotli", "stream"] }
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
lazy_static = "1.4.0"
config = "0.10.1"
